container-shim-python-@{PYTHON_BASE_VERSION} (20230717) @{SUITE}; urgency=medium

  * container-shim-python-@{PYTHON_BASE_VERSION}:
    remove "libpython@{PYTHON_BASE_VERSION}" from Provides.

 -- Konstantin Demin <rockdrilla@gmail.com>  Mon, 17 Jul 2023 18:31:00 +0300

container-shim-python-@{PYTHON_BASE_VERSION} (20230309) @{SUITE}; urgency=medium

  * container-shim-unqual-python-*:
    - move their Provides to container-python-* packages;
    - remove packages.
  * container-shim-python-*-misc: adjust Conflicts/Breaks.
  * Simplify versioning.

 -- Konstantin Demin <rockdrilla@gmail.com>  Thu, 09 Mar 2023 13:43:00 +0300

container-shim-python-@{PYTHON_BASE_VERSION} (20230306) @{SUITE}; urgency=medium

  * Initial release.

 -- Konstantin Demin <rockdrilla@gmail.com>  Mon, 06 Mar 2023 03:09:00 +0300