@@ -26,15 +26,15 @@ ARG SUITE
 ARG PYTHON_VERSION
 ARG PYTHON_BASE_VERSION
 
-COPY /package/.template/    /tmp/debian/
-COPY /package/python/shim/  /tmp/debian/
+COPY /package/.template/    /tmp/package/debian/
+COPY /package/python/shim/  /tmp/package/debian/
 
 # "ep.env" ensures that container limits and env are taken in account
 RUN build_start=$(date -R) ; \
     apt-update ; \
-    ep.env deb-src-export ${_SRC_DIR} /tmp/debian ; \
+    ep.env deb-src-export ${_SRC_DIR} /tmp/package/debian ; \
     set +e ; \
-    ep.env deb-src-build ${_SRC_DIR}/container-shim-python-*.dsc ${_PKG_DIR} ; \
+    ep.env deb-src-build ${_SRC_DIR}/k2-python-shim-*.dsc ${_PKG_DIR} ; \
     result=$? ; \
     set -e ; \
     build_finish=$(date -R) ; \
@@ -61,16 +61,16 @@ ARG PYTHON_BASE_VERSION
 ARG DEB_BUILD_OPTIONS
 ARG DEB_BUILD_PROFILES
 
-COPY /package/.template/                      /tmp/debian/
-COPY /package/python/template/                /tmp/debian/
-COPY /package/python/${PYTHON_BASE_VERSION}/  /tmp/debian/
+COPY /package/.template/                      /tmp/package/debian/
+COPY /package/python/template/                /tmp/package/debian/
+COPY /package/python/${PYTHON_BASE_VERSION}/  /tmp/package/debian/
 
 # "ep.env" ensures that container limits and env are taken in account
 RUN apt-update ; \
-    ep.env deb-src-export ${_SRC_DIR} /tmp/debian ; \
+    ep.env deb-src-export ${_SRC_DIR} /tmp/package/debian ; \
     cleanup ; \
     # linkage with "build-pkg" layer
-    touch /tmp/dsc
+    touch /dsc-mark
 
 # ---
 
@@ -78,7 +78,7 @@ FROM ${IMAGE_PATH}/${BUILD_IMAGE} as build-pkg
 SHELL [ "/bin/sh", "-ec" ]
 
 # linkage with "build-dsc" layer
-COPY --from=build-dsc /tmp/dsc /tmp/
+COPY --from=build-dsc /dsc-mark /tmp/
 
 ARG CI
 
@@ -97,20 +97,20 @@ ARG DEB_BUILD_OPTIONS
 ARG DEB_BUILD_PROFILES
 
 # CI/manual execution handler
-ENV BUILDINFO_MASK="container-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*_*.buildinfo"
+ENV BUILDINFO_MASK="k2-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*_*.buildinfo"
 RUN [ -z "${CI}" ] || exit 0; \
     if find ${_PKG_DIR}/ -maxdepth 1 -name "${BUILDINFO_MASK}" -type f -printf . -quit 2>/dev/null | grep -Fq . ; then \
-      # implicitly deletes /tmp/dsc
+      # implicitly deletes /tmp/dsc-mark
       cleanup ; \
       exit 0 ; \
     fi
 
 # "ep.env" ensures that container limits and env are taken in account
-RUN [ -e /tmp/dsc ] || exit 0 ; \
+RUN [ -e /tmp/dsc-mark ] || exit 0 ; \
     apt-update ; \
     build_start=$(date -R) ; \
     set +e ; \
-    ep.env deb-src-build ${_SRC_DIR}/container-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*.dsc ${_PKG_DIR} ; \
+    ep.env deb-src-build ${_SRC_DIR}/k2-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*.dsc ${_PKG_DIR} ; \
     result=$? ; \
     set -e ; \
     build_finish=$(date -R) ; \
@@ -141,8 +141,8 @@ FROM python-layout as minimal
 SHELL [ "/bin/sh", "-ec" ]
 
 COPY --from=packages [ \
-  "container-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*.deb", \
-  "container-shim-python-${PYTHON_BASE_VERSION}_*.deb", \
+  "k2-python-${PYTHON_BASE_VERSION}_${PYTHON_VERSION}-*.deb", \
+  "k2-python-shim-${PYTHON_BASE_VERSION}_*.deb", \
   "/tmp/" ]
 
 RUN apt-install /tmp/*.deb ; \
@@ -157,8 +157,8 @@ FROM ${IMAGE_PATH}/${PYTHON_MIN_IMAGE} as regular
 SHELL [ "/bin/sh", "-ec" ]
 
 COPY --from=packages [ \
-  "container-python-${PYTHON_BASE_VERSION}-full_${PYTHON_VERSION}-*.deb", \
-  "container-shim-python-${PYTHON_BASE_VERSION}-full_*.deb", \
+  "k2-python-${PYTHON_BASE_VERSION}-full_${PYTHON_VERSION}-*.deb", \
+  "k2-python-shim-${PYTHON_BASE_VERSION}-full_*.deb", \
   "/tmp/" ]
 
 RUN apt-install /tmp/*.deb ; \
@@ -175,8 +175,8 @@ FROM ${IMAGE_PATH}/${PYTHON_IMAGE} as dev
 SHELL [ "/bin/sh", "-ec" ]
 
 COPY --from=packages [ \
-  "container-python-${PYTHON_BASE_VERSION}-dev_${PYTHON_VERSION}-*.deb", \
-  "container-shim-python-${PYTHON_BASE_VERSION}-dev_*.deb", \
+  "k2-python-${PYTHON_BASE_VERSION}-dev_${PYTHON_VERSION}-*.deb", \
+  "k2-python-shim-${PYTHON_BASE_VERSION}-dev_*.deb", \
   "/tmp/" ]
 
 RUN apt-install /tmp/*.deb ; \
@@ -187,7 +187,7 @@ RUN apt-install /tmp/*.deb ; \
 FROM python-layout as minimal-ci
 SHELL [ "/bin/sh", "-ec" ]
 
-RUN apt-install container-shim-python-${PYTHON_BASE_VERSION} ; \
+RUN apt-install k2-python-shim-${PYTHON_BASE_VERSION} ; \
     cleanup ; \
     # smoke/qa
     set -xv ; \
@@ -198,7 +198,7 @@ RUN apt-install container-shim-python-${PYTHON_BASE_VERSION} ; \
 FROM ${IMAGE_PATH}/${PYTHON_MIN_IMAGE} as regular-ci
 SHELL [ "/bin/sh", "-ec" ]
 
-RUN apt-install container-shim-python-${PYTHON_BASE_VERSION}-full ; \
+RUN apt-install k2-python-shim-${PYTHON_BASE_VERSION}-full ; \
     cleanup ; \
     # smoke/qa
     set -xv ; \
@@ -211,5 +211,5 @@ RUN apt-install container-shim-python-${PYTHON_BASE_VERSION}-full ; \
 FROM ${IMAGE_PATH}/${PYTHON_IMAGE} as dev-ci
 SHELL [ "/bin/sh", "-ec" ]
 
-RUN apt-install container-shim-python-${PYTHON_BASE_VERSION}-dev ; \
+RUN apt-install k2-python-shim-${PYTHON_BASE_VERSION}-dev ; \
     cleanup
