@@ -46,9 +46,6 @@ build_single() {
 		$(build_artifacts_volumes "${stem}" "${DEB_SRC_BUILD_DIR}" "${_SRC_DIR}" "${_PKG_DIR}")
 	"
 
-	stem_path=$(build_artifacts_path "${stem}")
-	find "${stem_path}/src/" "${stem_path}/pkg/" -name "container-shim-python-${PYTHON_BASE_VERSION}*" -delete
-
 	build_image="${IMAGE_PATH}/python-shim-build:${PYTHON_VERSION}-${SUITE}"
 
 	set -e
